--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,8 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a set of commands using the runners shell
-      - name: Deploy extension
+      - name: Deploy extension to web store
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          npm install
+          npm run deploy
+          
