--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/ganeshjaiwal/Chrome-extension-demo/issues"
   },
-  "homepage": "https://github.com/ganeshjaiwal/Chrome-extension-demo#readme"
+  "homepage": "https://github.com/ganeshjaiwal/Chrome-extension-demo#readme",
+  "devDependencies": {
+    "chrome-webstore-manager": "^0.4.0",
+    "fs-extra": "^0.30.0",
+    "jsonfile": "^2.2.3",
+    "zip-local": "^0.3.4"
+  }
 }
